--- a/Style/style.css
+++ b/Style/style.css
@@ -8,13 +8,13 @@
 
 
 *{
-    margin: 0  ;
+    margin: 0 ;
 }
 
 
 /* Shared Style */
 
-li:hover .btn-primary {
+.btn-primary:hover{
     background-color: #006A50;
     color: azure;
 }
@@ -32,6 +32,7 @@ li a{
     text-decoration: none;
     padding: 20px 30px;
 }
+
 li{
     list-style: none;
     width: 400px;
@@ -41,20 +42,25 @@ li{
 /* Nav Style */
 nav{
     display: flex;
+   
     justify-content: space-between;
     align-items: center;
-    margin: 31px 160px;
+    margin-top: 40px;
+    margin-left: 161px;
+    margin-right: -40px;
     margin-bottom: 51px;
 }
 .nav-tittle{
     font-size: 40px;
     font-weight: 750;
 }
+
 /* Header Style */
 
 .header{
     width: 1900px;
     height: 1000px;
+    /* margin: 31px auto; */
 }
 .header-part{
     background-color: #C6E4D6;
@@ -73,6 +79,7 @@ nav{
     color: black;
     margin-bottom: 25px;
     
+    
 }
 .header-sub-tittle{
     font-size: 32px;
@@ -81,5 +88,4 @@ nav{
     margin-bottom: 20px;
     opacity: 50%;
 }
-
 /* Main Style */
