--- a/Style/style.css
+++ b/Style/style.css
@@ -8,7 +8,7 @@
 
 
 *{
-    margin: 0 ;
+    margin: 0;
 }
 
 
@@ -21,7 +21,7 @@
 
 .btn-primary{
     color: #006A50;
-    background-color: white;
+    background-color: aqua;
     font-size: 20px;
     font-weight: 600;
     padding: 20px 50px;
@@ -35,19 +35,17 @@ li a{
 
 li{
     list-style: none;
-    width: 400px;
+    width: 500px;
 }
-
 
 /* Nav Style */
 nav{
     display: flex;
-   
     justify-content: space-between;
     align-items: center;
     margin-top: 40px;
-    margin-left: 161px;
-    margin-right: -40px;
+    margin-left: 160px;
+    margin-right: -139px;
     margin-bottom: 51px;
 }
 .nav-tittle{
@@ -60,11 +58,10 @@ nav{
 .header{
     width: 1900px;
     height: 1000px;
-    /* margin: 31px auto; */
 }
 .header-part{
     background-color: #C6E4D6;
-    margin: 0 160px;
+    margin: 0 160px -50px 160px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -78,8 +75,6 @@ nav{
     font-weight: bold;
     color: black;
     margin-bottom: 25px;
-    
-    
 }
 .header-sub-tittle{
     font-size: 32px;
@@ -88,4 +83,284 @@ nav{
     margin-bottom: 20px;
     opacity: 50%;
 }
+.Ex-btn{
+    margin-left: -24px;
+}
+
 /* Main Style */
+
+/* Pillars Section Style */
+.Pillars-Part{
+  margin-left: 118px;
+  margin-right: 100px;
+}
+.pillars-tittle{
+    font-size: 50px;
+    font-weight: 810;
+    margin-bottom: 20px;
+    text-align: start;
+    margin-left: 40px;
+}
+.pillars-sub-tittle{
+    margin-bottom: 15px;
+}
+.pillars-container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 40px 60px 40px 40px;
+    gap: 40px;
+    border-radius: 5px;
+    
+}
+.pillars-icon{
+    width: 65px;
+    height: 65px;
+    margin-bottom: 25px;
+}
+.innovation-part{
+    padding: 30px 25px;
+    border-radius: 20px;
+    box-shadow: 0px 5px 5px 5px rgba(0, 0, 0, 0.06);
+    background-color:aliceblue;
+}
+.sustainability-part{
+    padding: 30px 25px;
+    border-radius: 20px;
+    box-shadow: 0px 5px 5px 5px rgba(0, 0, 0, 0.06);
+    background-color: aliceblue;
+}
+.infrastructure-part{
+    padding: 30px 25px;
+    border-radius: 20px;
+    box-shadow: 0px 5px 5px 5px rgba(0, 0, 0, 0.06);
+    background-color: aliceblue;
+}
+.empowerment-part{
+    padding: 30px 25px;
+    border-radius: 20px;
+    box-shadow: 0px 5px 5px 5px rgba(0, 0, 0, 0.08);
+    background-color: aliceblue;
+}
+
+/* Vision Section Style */
+.Vision-Part{
+    margin-left: 115px;
+    margin-right: -150px;
+}
+.vision-tittle{
+    margin-top: 80px;
+    font-size: 50px;
+    font-weight: 750;
+    margin-left: 40px;
+}
+.vision-sub-tittle{
+    margin-top: 30px;
+    font-size: 18px;
+    margin-left: 40px;
+    margin-right: 100px;
+    margin-bottom: 10px;
+    text-align: start;
+}
+.vision-container{
+    display: flex;
+    justify-items: center;
+    align-content: center;
+    padding: 10px;
+    gap: 40px;
+    border-radius: 5px;
+    width: 1300px;
+    height: 390px;
+}
+.vision-container-tittle{
+    font-size: 20px;
+}
+.vision-container-sub-tittle{
+    font-size: 15px;
+    margin-top: 15px;
+}
+.vision-icon{
+    width: 70px;
+    height: 70px;
+    margin-bottom: 25px;
+    padding-top: 40px;
+}
+.vision-btn-part{
+    margin-left: -30px;
+    align-items: center;
+}
+.vision-btn{
+    margin-top: 35px;
+    padding: 15px 30px;
+    border-radius: 10px;
+    font-size: 17px;
+    font-weight: 780;
+    text-align: start;
+    background-color: aqua;
+}
+#digital-btn:hover{
+    background-color: #397bee;
+    color: white;
+}
+#green-btn:hover{
+    background-color: #09a15d;
+    color: white;
+}
+#modern-btn:hover{
+    background-color: #ffbd21;
+    color: white;
+}
+.digital-part{
+    padding: 18px;
+    border-radius: 20px;
+    box-shadow: 0px 5px 5px 5px rgba(0, 0, 0, 0.06);
+    background-color:#4d8eff48;
+    margin-left: 20px;
+}
+.green-part{
+    padding: 18px;
+    border-radius: 20px;
+    box-shadow: 0px 5px 5px 5px rgba(0, 0, 0, 0.06);
+    background-color:#09a15d4f;
+}
+.modern-part{
+    padding: 18px;
+    border-radius: 20px;
+    box-shadow: 0px 5px 5px 5px rgba(0, 0, 0, 0.06);
+    background-color:#ffc4395d;
+    margin-right: 1000px;
+}
+
+
+.Dr{
+    display: flex;
+    flex-direction: column;
+    margin-left: 150px;
+    margin-right: 160px;
+    margin-top: 40px;
+    width: 1600;
+}
+
+.dr-container{
+    box-shadow: 0px 5px 5px 5px rgba(0, 0, 0, 0.08);
+    padding: 50px 25px 30px 30px;
+    border-radius: 15px;
+    background-image: url(../assets/quote-bg.png);
+    background-repeat: no-repeat;
+    background-position: 30px 45px;
+}
+.Dr-name{
+    margin-top: 15px;
+    font-size: 22px;
+    font-weight: 720;
+    margin-bottom: -10px;
+}
+.dr-tittle{
+    font-size: 16px;
+    margin-bottom: 20px;
+    margin-top: 20px;
+}
+/* Recent Part */
+
+.recent-tittle{
+    margin-top: 80px;
+    margin-left: 160px;
+    margin-bottom: 25px;
+    font-size: 40px;
+    font-weight: 750;
+    width: 500px;
+}
+.recent-sub-tittle{
+    margin-left: 160px;
+    margin-bottom: 60px;
+}
+.box1{
+    display: flex;
+    width: 78%;
+    box-shadow: 0px 55px 55px 55px rgba(0, 0, 0, 0.05);
+    margin: 0 auto;
+    justify-content: space-around;
+    align-items: center;
+    padding: 50px;
+    border-radius: 15px;
+}
+.box1-left{
+    width: 400px;
+    height: 300px;
+    margin-right: 50px;
+}
+.img-left{
+    border-radius: 20px;
+    width: 400px;
+    height: 300px;
+}
+.box1-right{
+padding: 20px;
+}
+.box1-tittle{
+    font-size: 32px;
+    font-weight: 750;
+    margin-bottom: 15px;
+}
+
+.box1-right-date{
+    margin-top: 12px;
+    margin-bottom: 12px;
+}
+.box1-right-para{
+    margin-bottom: 32px;
+}
+#box-btn{
+    padding: 15px 25px;
+    margin-left: -9px;
+    font-size: 18px;
+}
+.box2{
+    display: flex;
+    width: 78%;
+    box-shadow: 0px 55px 55px 55px rgba(0, 0, 0, 0.06);
+    margin: 0 auto;
+    justify-content: space-around;
+    align-items: center;
+    padding: 50px;
+    border-radius: 15px;
+}
+
+/* Donate Section */
+.Donate-Part{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+.donate-title{
+    margin-left: 820px;
+    margin-top: 100px;
+    font-size: 40px;
+    font-weight: 780;
+    margin-bottom: 24px;
+    
+}
+.donate-sub-tittle{
+    text-align: center;
+    width: 1280px;
+    margin-left: 320px;
+    margin-bottom: 35px;
+}
+.donate-tk{
+    margin-left: 400px;
+}
+.donate-btn:hover{
+    background-color: #006A50;
+    color: azure;
+}
+.donate-btn{
+    color: #006A50;
+    background-color: aqua;
+    font-size: 40px;
+    font-weight: 600;
+    padding: 40px;
+    border-radius: 10px;
+    margin-right: 20px;
+    margin-left: 20px;
+    margin-bottom: 35px;
+}
