--- a/Style/style.css
+++ b/Style/style.css
@@ -369,6 +369,7 @@ input[type="text"]{
     width: 1000px;
     border: none;
     box-shadow: 0px 55px 55px 55px rgba(0, 0, 0, 0.06);
+    border-radius: 10px;
 }
 .input-text{
     text-align: center;
@@ -405,4 +406,54 @@ input[type="text"]{
 .sub-tittle{
     font-size: 50px;
     font-weight: 750;
+}
+.input{
+    padding: 20px;
+    display: flex;
+    width: 700px;
+    height: 20px;
+    border: none;
+    box-shadow: 0px 55px 55px 55px rgba(0, 0, 0, 0.06);
+    border-radius: 10px 0px 0px 10px;
+}
+form{
+    display: flex;
+    gap: 0px;
+}
+.submit{
+    border-radius: 0px 10px 10px 0px;
+    border: none;
+    font-size: 20px;
+    padding: 0px 40px 0px 40px;
+    background-color:rgb(51, 228, 219) ;
+}
+.submit:hover{
+    background-color: #006A50;
+    color: azure;
+}
+.foot{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.Bd{
+    font-size: 35px;
+    font-weight: 750;
+    margin-bottom: 30px;
+    margin-left: 50px;
+}
+hr{ 
+    text-align: center;
+    width: 1122px;
+    margin-bottom: 40px;
+    color: #0E0E0E;
+}
+.foot-img{
+    text-align: center;
+    margin-left: 60px;
+    
+}
+.fb-img{
+    margin-right: 20px;
+    margin-bottom: 30px;
 }
