--- a/Style/style.css
+++ b/Style/style.css
@@ -6,11 +6,10 @@
       "wdth" 100;
 }
 
-
-*{
+body{
     margin: 0;
+    overflow-x : hidden;
 }
-
 
 /* Shared Style */
 
@@ -18,7 +17,6 @@
     background-color: #006A50;
     color: azure;
 }
-
 .btn-primary{
     color: #006A50;
     background-color: aqua;
@@ -37,7 +35,6 @@ li{
     list-style: none;
     width: 500px;
 }
-
 /* Nav Style */
 nav{
     display: flex;
@@ -52,9 +49,7 @@ nav{
     font-size: 40px;
     font-weight: 750;
 }
-
 /* Header Style */
-
 .header{
     width: 1900px;
     height: 1000px;
@@ -69,7 +64,6 @@ nav{
     border-radius: 24px;
     gap: 70px;
 }
- 
 .header-tittle{
     font-size: 70px;
     font-weight: bold;
@@ -86,9 +80,7 @@ nav{
 .Ex-btn{
     margin-left: -24px;
 }
-
 /* Main Style */
-
 /* Pillars Section Style */
 .Pillars-Part{
   margin-left: 118px;
@@ -142,7 +134,6 @@ nav{
     box-shadow: 0px 5px 5px 5px rgba(0, 0, 0, 0.08);
     background-color: aliceblue;
 }
-
 /* Vision Section Style */
 .Vision-Part{
     margin-left: 115px;
@@ -230,8 +221,6 @@ nav{
     background-color:#ffc4395d;
     margin-right: 1000px;
 }
-
-
 .Dr{
     display: flex;
     flex-direction: column;
@@ -240,7 +229,6 @@ nav{
     margin-top: 40px;
     width: 1600;
 }
-
 .dr-container{
     box-shadow: 0px 5px 5px 5px rgba(0, 0, 0, 0.08);
     padding: 50px 25px 30px 30px;
@@ -261,7 +249,6 @@ nav{
     margin-top: 20px;
 }
 /* Recent Part */
-
 .recent-tittle{
     margin-top: 80px;
     margin-left: 160px;
@@ -302,7 +289,6 @@ padding: 20px;
     font-weight: 750;
     margin-bottom: 15px;
 }
-
 .box1-right-date{
     margin-top: 12px;
     margin-bottom: 12px;
@@ -325,7 +311,6 @@ padding: 20px;
     padding: 50px;
     border-radius: 15px;
 }
-
 /* Donate Section */
 .Donate-Part{
     display: flex;
