--- a/Style/style.css
+++ b/Style/style.css
@@ -6,9 +6,11 @@
       "wdth" 100;
 }
 
+
 body{
     margin: 0;
     overflow-x : hidden;
+    overflow-y: auto;
 }
 
 /* Shared Style */
@@ -82,10 +84,6 @@ nav{
 }
 /* Main Style */
 /* Pillars Section Style */
-/* .Pillars-Part{
-  margin-left: 118px;
-  margin-right: 100px;
-} */
 .pillars-tittle{
     font-size: 50px;
     font-weight: 810;
@@ -179,14 +177,15 @@ nav{
 .vision-btn-part{
     margin-left: -30px;
     align-items: center;
+    justify-content: center;
 }
 .vision-btn{
-    margin-top: 35px;
-    padding: 15px 30px;
+    padding: 10px 30px;
     border-radius: 10px;
     font-size: 17px;
     font-weight: 780;
     text-align: start;
+    justify-content: center;
     background-color: aqua;
 }
 #digital-btn:hover{
@@ -202,20 +201,20 @@ nav{
     color: white;
 }
 .digital-part{
-    padding: 18px;
+    padding: 20px;
     border-radius: 20px;
     box-shadow: 0px 5px 5px 5px rgba(0, 0, 0, 0.06);
     background-color:#4d8eff48;
     margin-left: 20px;
 }
 .green-part{
-    padding: 18px;
+    padding: 20px;
     border-radius: 20px;
     box-shadow: 0px 5px 5px 5px rgba(0, 0, 0, 0.06);
     background-color:#09a15d4f;
 }
 .modern-part{
-    padding: 18px;
+    padding: 20px;
     border-radius: 20px;
     box-shadow: 0px 5px 5px 5px rgba(0, 0, 0, 0.06);
     background-color:#ffc4395d;
@@ -282,12 +281,11 @@ nav{
     height: 300px;
 }
 .box1-right{
-padding: 20px;
+padding: 15px;
 }
 .box1-tittle{
     font-size: 32px;
     font-weight: 750;
-    margin-bottom: 15px;
 }
 .box1-right-date{
     margin-top: 12px;
@@ -304,7 +302,7 @@ padding: 20px;
 .box2{
     display: flex;
     width: 78%;
-    box-shadow: 0px 55px 55px 55px rgba(0, 0, 0, 0.06);
+    box-shadow: 0px 55px 55px 55px rgba(0, 0, 0, 0.05);
     margin: 0 auto;
     justify-content: space-around;
     align-items: center;
@@ -352,6 +350,8 @@ padding: 20px;
 input[type="text"]{
     padding: 25px 25px;
     width: 1000px;
+    font-size: 25px;
+    text-align: center;
     border: none;
     box-shadow: 0px 55px 55px 55px rgba(0, 0, 0, 0.06);
     border-radius: 10px;
@@ -380,7 +380,7 @@ input[type="text"]{
     margin-top: 80px;
     margin-bottom: 80px;
     margin-left: 250px;
-    height: 300px;
+    height: 400px;
     width: 1200px;
     display: flex;
     flex-direction: column;
@@ -393,8 +393,9 @@ input[type="text"]{
     font-weight: 750;
 }
 .input{
-    padding: 20px;
+    padding: 25px;
     display: flex;
+    font-size: 20px;
     width: 700px;
     height: 20px;
     border: none;
